<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sf.ehcache</groupId>
	<artifactId>ehcache-tools</artifactId>
	<version>1.0.0</version>
	<name>EhCache tools</name>
	<description>Ehcache tools</description>

	<licenses>
		<license>
			<name>Terracotta Public License</name>
			<url>http://www.terracotta.org/license.txt</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tc-connect-servers>tcvm:9510,tcvm:9610</tc-connect-servers>
	</properties>

	<developers>
		<developer>
			<id>gbshiva</id>
			<name>Shivakumar Gokaram</name>
			<email>sgokaram@terracottatech.com</email>
			<url>http://www.terracotta.org</url>
			<organization>Terracotta, Inc.</organization>
			<organizationUrl>http://www.terracotta.org</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-6</timezone>
		</developer>
		<developer>
			<id>fsanglie</id>
			<name>Fabien Sanglier</name>
			<email>fsanglie@terracottatech.com</email>
			<url>http://www.terracotta.org</url>
			<organization>Terracotta, Inc.</organization>
			<organizationUrl>http://www.terracotta.org</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>-6</timezone>
		</developer>
	</developers>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
<!--
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>
-->
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.3.1</version>
				<configuration>
					<repositoryLayout>flat</repositoryLayout>
					<!-- Extra JVM arguments that will be included in the bin scripts -->
					<extraJvmArguments>-Xms512m -Xmx1024m -XX:MaxPermSize=256m
						-XX:+UseParallelOldGC -XX:+UseCompressedOops
						-XX:MaxDirectMemorySize=10G
						-Dcom.tc.productkey.path=${user.home}/terracotta-license.key
					</extraJvmArguments>
					<programs>
						<program>
							<mainClass>com.terracotta.tools.cacheSize</mainClass>
							<name>cacheSize.sh</name>
						</program>
					</programs>
				</configuration>
			</plugin>
			<plugin>
  				<groupId>org.apache.maven.plugins</groupId>
  				<artifactId>maven-assembly-plugin</artifactId>
  				<configuration>
    								<descriptor>src/assembly/bin.xml</descriptor>
    								<finalName>ehcache-tools</finalName>
  				</configuration>
  				<executions>
    								<execution>
      								<phase>package</phase>
      								<goals>
        								<goal>single</goal>
      								</goals>
    								</execution>
  				</executions>
				</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>ehcache-2.6.x</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<ehcache-core-ee.version>2.6.8</ehcache-core-ee.version>
				<ehcache-terracotta-ee.version>2.6.8</ehcache-terracotta-ee.version>
				<toolkit.version>5.7.0</toolkit.version>
				<slf4j.version>1.6.1</slf4j.version>
				<junit.version>4.6</junit.version>
				<!-- <net.sf.ehcache.configurationResourceName>ehcache-bm-l2only.xml</net.sf.ehcache.configurationResourceName>-->
			</properties>
			<dependencies>
				<!-- EhCache -->
				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-core-ee</artifactId>
					<version>${ehcache-core-ee.version}</version>
				</dependency>

				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-terracotta-ee</artifactId>
					<version>${ehcache-terracotta-ee.version}</version>
				</dependency>
				<dependency>
					<groupId>org.terracotta</groupId>
					<artifactId>terracotta-toolkit-1.6-runtime-ee</artifactId>
					<version>${toolkit.version}</version>
				</dependency>

				<!-- SLF4J -->
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
					<version>${slf4j.version}</version>
				</dependency>

				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
					<version>${slf4j.version}</version>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>ehcache-2.7.x</id>
			<properties>
				<bigmemory.version>4.0.2</bigmemory.version>
				<ehcache-ee.version>2.7.2</ehcache-ee.version>
				<toolkit.version>4.0.2</toolkit.version>
				<slf4j.version>1.7.1</slf4j.version>
				<junit.version>4.11</junit.version>
				<net.sf.ehcache.configurationResourceName>ehcache.xml</net.sf.ehcache.configurationResourceName>
			</properties>
			<dependencies>
				<!-- EhCache -->
				<!-- <dependency>
					<groupId>org.terracotta.bigmemory</groupId>
					<artifactId>bigmemory</artifactId>
					<version>${bigmemory.version}</version>
				</dependency> -->
				<dependency>
					<groupId>net.sf.ehcache</groupId>
					<artifactId>ehcache-ee</artifactId>
					<version>${ehcache-ee.version}</version>
				</dependency>
				<dependency>
					<groupId>org.terracotta</groupId>
					<artifactId>terracotta-toolkit-runtime-ee</artifactId>
					<version>${toolkit.version}</version>
				</dependency>
				<!-- SLF4J -->
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
					<version>${slf4j.version}</version>
				</dependency>

				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
					<version>${slf4j.version}</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>terracotta-snapshots</id>
			<url>http://www.terracotta.org/download/reflector/snapshots</url>
		</repository>
		<repository>
			<id>terracotta-releases</id>
			<url>http://www.terracotta.org/download/reflector/releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>
</project>
